# prompt-evals

./: Read.md  dataset.json  main.py  pyproject.toml  requirements.text
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
src/api/: evals.py
src/api/integration/: openrouter.py
src/api/prompts/: refine.py
src/api/resources/: dataset.json  llms.json
src/api/service/: service.py
